邀请人改为邀请码

--- a/views/invitecode.ejs
+++ b/views/invitecode.ejs
@@ -17,7 +17,7 @@
         box-shadow: 10px 10px 20px #c5c4c457;color: white;padding: 1em;"
       >
         <text style="font-weight: 400;font-family: '黑体';margin-top: 1em ;">
-          邀请人：<%=inviteCode%>
+          邀请码：<%=inviteCode%>
         </text>
       </div>
     </div>
