--- a/views/invitecode.ejs
+++ b/views/invitecode.ejs
@@ -31,7 +31,7 @@
         box-shadow: 10px 10px 20px #c5c4c457;color: white;padding: 1em;"
       >
         <text style="font-weight: 400;font-family: '黑体';margin-top: 1em ;">
-          邀请好友关注新碶成教公众号，回复后台上方邀请格式（邀请人：您的邀请码），邀请成功一位好友便可以获得1分，一天之内邀请达到10人，即可再获得5分；
+          邀请好友关注新碶成教公众号，回复后台上方邀请格式（邀请码：您的邀请码），邀请成功一位好友便可以获得1分，一天之内邀请达到10人，即可再获得5分；
         </text>
       </div>
     </div>
